--- a/styles/app.css
+++ b/styles/app.css
@@ -47,6 +47,10 @@
   --grey-800: #212837;
   --lfm-pink-200: #fae7e7;
   --lfm-blue-700: #35546d;
+  --lfm-cinnamon-700: #934826;
+  --lfm-cinnamon-500: #c6694c;
+  --lfm-cinnamon-100: #ccc7c5;
+  --lfm-cinnamon-50: #696464;
   --nav-top-sm: 68px;
   --nav-top-lg: 76px;
 }
