--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1887,6 +1887,9 @@ video {
 .mr-16 {
   margin-right: 4rem;
 }
+.mt-\[var\(--nav-top-sm\)\] {
+  margin-top: var(--nav-top-sm);
+}
 .mb-28 {
   margin-bottom: 7rem;
 }
@@ -2015,6 +2018,9 @@ video {
 }
 .h-\[38px\] {
   height: 38px;
+}
+.h-\[500px\] {
+  height: 500px;
 }
 .h-\[600px\] {
   height: 600px;
@@ -2475,6 +2481,9 @@ video {
 .max-w-\[144px\] {
   max-width: 144px;
 }
+.max-w-\[32px\] {
+  max-width: 32px;
+}
 .max-w-\[191px\] {
   max-width: 191px;
 }
@@ -2562,9 +2571,6 @@ video {
 .max-w-\[78px\] {
   max-width: 78px;
 }
-.max-w-\[32px\] {
-  max-width: 32px;
-}
 .max-w-\[220px\] {
   max-width: 220px;
 }
@@ -2615,6 +2621,9 @@ video {
 }
 .origin-center {
   transform-origin: center;
+}
+.origin-top-center {
+  transform-origin: top center;
 }
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
@@ -2816,6 +2825,18 @@ video {
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+@keyframes addPadding {
+  0% {
+    padding: 0 0px 0 0;
+  }
+  100% {
+    overflow-y: hidden;
+    padding: 0 15px 0 0;
+  }
+}
+.animate-addPadding {
+  animation: addPadding 0ms 150ms ease-in-out forwards;
 }
 @keyframes fadeIn {
   0% {
@@ -3635,6 +3656,9 @@ video {
 .pr-0 {
   padding-right: 0px;
 }
+.pl-9 {
+  padding-left: 2.25rem;
+}
 .pt-\[80px\] {
   padding-top: 80px;
 }
@@ -3643,9 +3667,6 @@ video {
 }
 .pt-1 {
   padding-top: 0.25rem;
-}
-.pl-9 {
-  padding-left: 2.25rem;
 }
 .pt-16 {
   padding-top: 4rem;
@@ -3981,6 +4002,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
+.text-grey-400 {
+  --tw-text-opacity: 1;
+  color: rgb(157 163 175 / var(--tw-text-opacity));
+}
 .text-\[\#7a4b0e\] {
   --tw-text-opacity: 1;
   color: rgb(122 75 14 / var(--tw-text-opacity));
@@ -3999,10 +4024,6 @@ video {
 }
 .text-lfm-cinnamon-700 {
   color: var(--lfm-cinnamon-700);
-}
-.text-grey-400 {
-  --tw-text-opacity: 1;
-  color: rgb(157 163 175 / var(--tw-text-opacity));
 }
 .text-primary-500 {
   --tw-text-opacity: 1;
@@ -4165,6 +4186,11 @@ video {
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-cody-sm {
+  --tw-shadow: 0 0.3px 0.4px hsla(0, 0%, 0%, 0.025),0 0.9px 1.5px hsla(0, 0%, 0%, 0.05),0 3.5px 6px hsla(0, 0%, 0%, 0.1);;
+  --tw-shadow-colored: 0 0.3px 0.4px var(--tw-shadow-color), 0 0.9px 1.5px var(--tw-shadow-color), 0 3.5px 6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow {
